# grocyscan

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Makefile  RALPH_TASK.md  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/: RALPH-README.md
.github/: SELF_HOSTED_RUNNER.md
.ralph/: guardrails.md  progress.md
app/: __init__.py  config.py  main.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.homepage.yml  docker-compose.preview.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
docs/: GROCY-USERFIELDS.md  SELF_HOSTED_RUNNER_DEBIAN13.md  cicd-architecture.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
infrastructure/: bootstrap.sh  create-lxc.sh  setup-runner.sh
migrations/: env.py  script.py.mako
prd/: 00-Standards-of-Development.md  00.00-johnny-decimal-standard.md  01-executive-summary.md  02-user-stories.md  03-functional-requirements.md  04-technical-architecture.md  05-data-models.md  06-api-specification.md  07-ui-specification.md  08-observability.md  09-installation-operations.md  10-testing-strategy.md  10.10-standards-of-development.md  10.11-executive-summary.md  10.12-delivery-plan.md  11-schema-evolution.md  12-security.md  13-project-standards.md  14-delivery-plan.md  20.10-user-stories.md  20.11-functional-requirements.md  30.10-technical-architecture.md  30.11-data-models.md  30.12-api-specification.md  30.13-ui-specification.md  40.10-installation-operations.md  40.11-observability.md  40.12-security.md  40.13-schema-evolution.md  40.14-environment-variables.md  40.15-deployment.md  50.10-testing-strategy.md  50.11-project-standards.md  50.12-troubleshooting.md  60.10-qr-routing-system.md  60.11-multi-tenant.md  60.12-device-preferences.md  60.13-label-printing.md  60.14-container-management.md  60.15-lpn-instance-tracking.md  (+32 more)
scripts/: cursor-deploy.sh  deploy.ps1  deploy.sh  expand-playwright-report.ps1  expand-playwright-report.sh  generate_password_hash.py  install.sh  npm-proxy.sh  preview-status.sh  setup_self_hosted_runner_debian13.sh  test.sh  test_api.py  test_brave_search.py  test_hot_reload.py  test_llm.py  test_lookups.py  (+4 more)
(+242 files in other folders)
